2008-07-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/checker.py:
	  Change _findModule to take an optional moduleDir keyword argument.
	  Use it in setupMainCode
	  Make sibling imports work by temporarily putting moduleDir on
	  sys.path

2008-07-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/checker.py:
	  Add self.moduleDir to filename() for PyCheckerModule.

2008-07-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/checker.py:
	  Refactor code such that we can pass a moduleDir keyword argument to
	  PyCheckerModule.  This will allow us to discern between modules
	  with the same name, but in a different directory.
	  Change allModules to be a dict of (moduleName, moduleDir) -> module
	  No behaviour change yet.

2008-07-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/checker.py:
	  When showing what we're processing, show module name and file name.
	* test_expected/test1:
	* test_expected/test1-2.3:
	* test_expected/test1-2.4:
	* test_expected/test1-2.5:
	* test_expected/test10:
	* test_expected/test100:
	* test_expected/test101:
	* test_expected/test11:
	* test_expected/test12:
	* test_expected/test13:
	* test_expected/test14:
	* test_expected/test15:
	* test_expected/test16:
	* test_expected/test17:
	* test_expected/test17-2.4:
	* test_expected/test18:
	* test_expected/test19:
	* test_expected/test2:
	* test_expected/test20:
	* test_expected/test20-2.4:
	* test_expected/test20-2.5:
	* test_expected/test21:
	* test_expected/test22:
	* test_expected/test23:
	* test_expected/test24:
	* test_expected/test25:
	* test_expected/test26:
	* test_expected/test27:
	* test_expected/test27-2.2:
	* test_expected/test27-2.3:
	* test_expected/test27-2.4:
	* test_expected/test27-2.5:
	* test_expected/test28:
	* test_expected/test29:
	* test_expected/test3:
	* test_expected/test3-2.2:
	* test_expected/test3-2.3:
	* test_expected/test3-2.4:
	* test_expected/test3-2.5: